updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm new to coding and I'm excited to get into the field and learn as much as I can!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Florida's Space Coast!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading, writing stories, watching sci fi shows, and now coding!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full time web developer, part time fantasy writer!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Coding to me is like playing piano, it was a skill that I hadn't considered doing but found that I loved.  I'm very excited to learn more and to expand my knowledge!</p>
     </section>
 
     <footer id="footer">
